# controladvisor-ai

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/example_problems/: indoor_diff_drive_agv.yaml
data/method_cards/: _template.yaml  astar.yaml  dwa.yaml  ekf_slam.yaml  graph_slam.yaml  lqr.yaml  mpc.yaml  pid.yaml  pure_pursuit.yaml
docs/: assistant_handoff.md
src/controladvisor/: __init__.py
src/controladvisor/app/: __init__.py
src/controladvisor/cli/: __init__.py
src/controladvisor/explanation/: __init__.py
src/controladvisor/knowledge_base/: __init__.py  loader.py
src/controladvisor/reasoning/: __init__.py  recommender.py  rule_engine.py  scoring.py
src/controladvisor/schemas/: __init__.py  method_card.py  problem.py
src/controladvisor/simulation/: __init__.py
tests/: test_import.py  test_knowledge_base_loader.py  test_method_card_schema.py  test_problem_schema.py  test_recommender.py  test_rule_engine.py  test_scoring.py
